--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     body{margin:0;background:#000;color:#0f0;font-family:Consolas,monospace;padding:22px}
     a{color:#8aff8a;text-decoration:none}
     a:hover{text-decoration:underline}
-    .box{max-width:780px;border:1px solid rgba(0,255,0,.25);border-radius:14px;padding:16px;background:rgba(0,255,0,.04)}
+    .box{max-width:820px;border:1px solid rgba(0,255,0,.25);border-radius:14px;padding:16px;background:rgba(0,255,0,.04)}
     .row{display:flex;gap:12px;flex-wrap:wrap;margin-top:12px}
     .btn{display:inline-block;padding:12px 14px;border:1px solid rgba(0,255,0,.35);border-radius:12px;background:rgba(0,0,0,.35)}
     .muted{opacity:.75;font-size:13px;margin-top:10px;line-height:1.35}
+    code{color:#b6ffb6}
   </style>
 </head>
 <body>
@@ -23,7 +24,8 @@
       <a class="btn" href="./Infoczytnik.html?debug=1">Infoczytnik (debug)</a>
     </div>
     <div class="muted">
-      Tip: w Infoczytniku kliknij raz ekran, żeby odblokować audio (wymóg Chrome).
+      Audio: w Infoczytniku kliknij raz ekran, żeby odblokować dźwięk (wymóg przeglądarki).<br>
+      Adres strony: <code>https://cutelittlegoat.github.io/wh40k-data-slate/</code>
     </div>
   </div>
 </body>
