--- a/GM.html
+++ b/GM.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>WH40k Data-Slate — GM</title>
   <style>
-    :root{--bg:#070707;--text:#eaeaea;--muted:#bdbdbd;--accent:#ffd27a;--border:#2a2a2a;--panel:rgba(18,18,18,.92);}
+    :root{--text:#eaeaea;--muted:#bdbdbd;--accent:#ffd27a;--border:#2a2a2a;--panel:rgba(18,18,18,.92);}
     *{box-sizing:border-box}
     body{margin:0;padding:18px;font-family:Arial,sans-serif;background:linear-gradient(180deg,#070707,#0f0f0f);color:var(--text);}
     .wrap{max-width:980px;margin:0 auto}
@@ -38,20 +38,6 @@
     .chips{display:flex;gap:8px;flex-wrap:wrap;margin-top:8px}
     .chip{padding:8px 10px;border-radius:999px;border:1px solid rgba(255,255,255,.14);background:rgba(0,0,0,.18);cursor:pointer;user-select:none;font-size:13px;color:#eaeaea;}
     .chip span{display:inline-block;width:12px;height:12px;border-radius:3px;margin-right:6px;vertical-align:-2px}
-    .sectionTitle{margin-top:14px;font-size:14px;color:#ddd}
-    .audioBox{
-      border:1px solid rgba(255,255,255,.12);
-      border-radius:12px;
-      padding:10px 12px;
-      background:rgba(0,0,0,.2);
-    }
-    .audioRow{display:flex;gap:10px;flex-wrap:wrap;align-items:center}
-    .audioRow .check{
-      display:flex;align-items:center;gap:8px;color:#ddd;
-      padding:8px 10px;border-radius:10px;border:1px solid rgba(255,255,255,.10);background:rgba(0,0,0,.25)
-    }
-    .audioRow input[type="checkbox"]{transform:scale(1.15)}
-    .disabledHint{font-size:12px;color:#888;margin-top:6px}
   </style>
 </head>
 <body>
@@ -98,42 +84,6 @@
         </div>
       </div>
 
-      <div class="sectionTitle">Audio (URL)</div>
-
-      <div class="audioBox">
-        <div class="audioRow">
-          <div class="check">
-            <input type="checkbox" id="useDefaultPing" checked>
-            <span>Domyślny Ping</span>
-          </div>
-          <div style="flex:1;min-width:260px">
-            <input type="text" id="customPingUrl" placeholder="Wklej własny Ping URL (gdy odznaczysz Domyślny Ping)" />
-            <div class="disabledHint" id="pingHint"></div>
-          </div>
-        </div>
-
-        <div style="height:10px"></div>
-
-        <div class="audioRow">
-          <div class="check">
-            <input type="checkbox" id="useDefaultMsg" checked>
-            <span>Domyślny Message</span>
-          </div>
-          <div style="flex:1;min-width:260px">
-            <input type="text" id="customMsgUrl" placeholder="Wklej własny Message URL (gdy odznaczysz Domyślny Message)" />
-            <div class="disabledHint" id="msgHint"></div>
-          </div>
-        </div>
-
-        <div class="small" style="margin-top:10px">
-          Domyślne linki są wbudowane w kod (Twoje Google Drive direct linki). Gdy checkbox zaznaczony, pole jest nieaktywne, ale wpisana wartość zostaje.
-        </div>
-      </div>
-
-      <div class="btnrow">
-        <button id="saveAudioBtn">Zapisz audio (defaults)</button>
-      </div>
-
       <div class="preview" id="prefixPreview"></div>
 
       <label>Treść komunikatu</label>
@@ -145,6 +95,7 @@
         <button class="primary" id="sendBtn">Wyślij</button>
         <button class="warn" id="pingBtn">Ping</button>
         <button id="clearBtn">Wyczyść ekran</button>
+        <button id="clearTextBtn">Wyczyść pole</button>
       </div>
 
       <div class="small">Status: <span class="status" id="status">…</span></div>
@@ -155,10 +106,6 @@
   <script src="https://www.gstatic.com/firebasejs/9.6.8/firebase-firestore-compat.js"></script>
 
   <script>
-    // === TWOJE DOMYŚLNE LINKI ===
-    const DEFAULT_PING_URL = "https://drive.google.com/uc?export=download&id=17WEFjW2IfpdxkD5mpca1diKzZEtfhjjS";
-    const DEFAULT_MSG_URL  = "https://drive.google.com/uc?export=download&id=1wAkGv3Hdhi_mnh2gAIUDvGj-nFfbOW4c";
-
     const firebaseConfig = {
       apiKey: "AIzaSyCVoWzXtO-vipsxnvZlFkcqcNgYYuH3osc",
       authDomain: "wh40k-data-slate.firebaseapp.com",
@@ -172,7 +119,6 @@
     const db = firebase.firestore();
 
     const currentRef = db.collection("dataslate").doc("current");
-    const configRef  = db.collection("dataslate").doc("config");
 
     const el = {
       faction: document.getElementById("faction"),
@@ -183,19 +129,12 @@
       message: document.getElementById("message"),
       sendBtn: document.getElementById("sendBtn"),
       clearBtn: document.getElementById("clearBtn"),
+      clearTextBtn: document.getElementById("clearTextBtn"),
       pingBtn: document.getElementById("pingBtn"),
       status: document.getElementById("status"),
       prefixPreview: document.getElementById("prefixPreview"),
       suffixPreview: document.getElementById("suffixPreview"),
       chips: Array.from(document.querySelectorAll(".chip")),
-
-      useDefaultPing: document.getElementById("useDefaultPing"),
-      useDefaultMsg: document.getElementById("useDefaultMsg"),
-      customPingUrl: document.getElementById("customPingUrl"),
-      customMsgUrl: document.getElementById("customMsgUrl"),
-      pingHint: document.getElementById("pingHint"),
-      msgHint: document.getElementById("msgHint"),
-      saveAudioBtn: document.getElementById("saveAudioBtn"),
     };
 
     const LAYOUTS = {
@@ -232,44 +171,6 @@
       el.suffixPreview.textContent = cfg.suffixes[sIdx-1] || "";
     }
 
-    function refreshAudioUI(){
-      // Ping
-      el.customPingUrl.disabled = el.useDefaultPing.checked;
-      el.pingHint.textContent = el.useDefaultPing.checked ? ("Używany: domyślny Ping URL") : ("Używany: własny Ping URL");
-      // Message
-      el.customMsgUrl.disabled = el.useDefaultMsg.checked;
-      el.msgHint.textContent = el.useDefaultMsg.checked ? ("Używany: domyślny Message URL") : ("Używany: własny Message URL");
-    }
-
-    function resolvedPingUrl(){
-      return el.useDefaultPing.checked ? DEFAULT_PING_URL : (el.customPingUrl.value || "").trim();
-    }
-    function resolvedMsgUrl(){
-      return el.useDefaultMsg.checked ? DEFAULT_MSG_URL : (el.customMsgUrl.value || "").trim();
-    }
-
-    async function saveAudioConfig(){
-      setStatus("zapisuję audio…");
-      try{
-        await configRef.set({
-          audio: {
-            defaults: {
-              pingUrl: resolvedPingUrl(),
-              messageUrl: resolvedMsgUrl(),
-              // flagi zostawiamy na przyszłość (gdybyś chciał rozróżniać)
-              useDefaultPing: !!el.useDefaultPing.checked,
-              useDefaultMsg:  !!el.useDefaultMsg.checked,
-            }
-          }
-        }, { merge:true });
-        setStatus("audio zapisane");
-      }catch(e){
-        console.error(e);
-        setStatus("BŁĄD audio");
-        alert("Błąd zapisu audio:\n\n" + (e?.message || e));
-      }
-    }
-
     async function sendMessage(isClear){
       const cfg=getLayout();
       const pMax=cfg.prefixes.length, sMax=cfg.suffixes.length;
@@ -301,7 +202,7 @@
       try{
         await currentRef.set({
           type:"ping",
-          faction: el.faction.value, // ping wie “kto” nadaje
+          faction: el.faction.value,
           nonce: nonce(),
           ts: firebase.firestore.FieldValue.serverTimestamp()
         }, { merge:true });
@@ -313,14 +214,14 @@
       }
     }
 
-    // UI events
-    el.saveAudioBtn.addEventListener("click", saveAudioConfig);
     el.sendBtn.addEventListener("click", () => sendMessage(false));
     el.clearBtn.addEventListener("click", () => sendMessage(true));
     el.pingBtn.addEventListener("click", ping);
 
-    el.useDefaultPing.addEventListener("change", refreshAudioUI);
-    el.useDefaultMsg.addEventListener("change", refreshAudioUI);
+    el.clearTextBtn.addEventListener("click", () => {
+      el.message.value = "";
+      el.message.focus();
+    });
 
     el.chips.forEach(ch => ch.addEventListener("click", () => {
       const c=ch.getAttribute("data-color"); if(c) el.fontColor.value=c;
@@ -333,24 +234,8 @@
       el.suffixIndex.addEventListener(evt, computePreview);
     });
 
-    // wczytaj config (jeśli był zapisany wcześniej)
-    configRef.onSnapshot((snap)=>{
-      const d = snap.exists ? snap.data() : {};
-      const a = d?.audio?.defaults || {};
-      // jeżeli w bazie są URL-e, wpisz je jako “custom” i ustaw checkboxy zgodnie z flagami
-      if (typeof a.useDefaultPing === "boolean") el.useDefaultPing.checked = a.useDefaultPing;
-      if (typeof a.useDefaultMsg === "boolean") el.useDefaultMsg.checked  = a.useDefaultMsg;
-
-      // zachowujemy to, co użytkownik mógł wpisać; ale jeśli puste, uzupełnimy z bazy
-      if (!el.customPingUrl.value && a.pingUrl && a.pingUrl !== DEFAULT_PING_URL) el.customPingUrl.value = a.pingUrl;
-      if (!el.customMsgUrl.value && a.messageUrl && a.messageUrl !== DEFAULT_MSG_URL) el.customMsgUrl.value = a.messageUrl;
-
-      refreshAudioUI();
-    });
-
     setStatus("gotowe");
     computePreview();
-    refreshAudioUI();
   </script>
 </body>
 </html>
