--- a/Infoczytnik.html
+++ b/Infoczytnik.html
@@ -160,15 +160,17 @@
     </div>
   </div>
 
-  <div class="wrap" id="wrap" style="display:none;">
-    <div class="panel" id="panel">
-      <div class="frame">
-        <div class="line" id="prefixLine"></div>
-        <div class="msg" id="msg" data-text=""></div>
-        <div class="line" id="suffixLine"></div>
-      </div>
+<div class="wrap" id="wrap">
+  <div class="panel" id="panel">
+    <!-- to jest “bezpieczne pole” na tekst -->
+    <div class="screen" id="screen">
+      <div class="line" id="prefixLine"></div>
+      <div class="msg" id="msg" data-text=""></div>
+      <div class="line" id="suffixLine"></div>
     </div>
   </div>
+</div>
+
 
   <div class="debug" id="debug"></div>
 
@@ -367,3 +369,4 @@
   </script>
 </body>
 </html>
+
